--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 
 :root {
     --text: #336c71;
-    --background: #cfc8c8;
+    --background: #d9d9d9;
 }
 
 * {
@@ -17,7 +17,7 @@ body {
     font-family: "Questrial", sans-serif;
 }
 
-li a {
+span a {
     color: var(--text);
     font-family: "Open Sans", sans-serif;
     font-weight: 400;
@@ -39,7 +39,6 @@ header {
 }
 
 .navlinks {
-    list-style: none;
     display: flex;
     flex-direction: row;
     gap: 10px;
