--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,153 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Questrial&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700;800;900&family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
 :root {
-    --text: #336c71;
-    --background: #d9d9d9;
+  --primary: #e5e5e5;
+  --secondbackground: #14213d;
+  --terciary: #648de5;
+  --secondary: #000;
+  --thirdbackground: #fff;
 }
 
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    color: var(--text);
-    background-color: var(--background);
-    font-family: "Questrial", sans-serif;
-}
-
-span a {
-    color: var(--text);
-    font-family: "Open Sans", sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    text-decoration: none;
-    transition: all 0.3s ease 0s;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style: none;
+  font-family: "Poppins", sans-serif;
 }
 
 header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 2%;
+  color: var(--secondary);
+  background-color: var(--thirdbackground);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 2%;
+  position: fixed;
+  top: 0;
+  z-index: 2;
+}
+
+span a {
+  color: var(--secondary);
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  transition: all 0.3s ease 0s;
 }
 
 .logo {
-    width: 80px;
-    height: auto;
+  width: 80px;
+  height: auto;
 }
 
 .navlinks {
-    display: flex;
-    flex-direction: row;
-    gap: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
-.inicio:hover {
-    color: #e0d500;
+.navlinks span a:hover {
+  color: var(--terciary);
 }
 
-.clientes:hover {
-    color: #ffffff;
+main {
+  width: 100%;
+  color: var(--primary);
+  background-color: var(--secondary);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.nosotros:hover {
-    color: #8e3fca;
+#hero {
+  max-width: 1200px;
+  padding: 70px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.contacto:hover {
-    color: #000000;
+.heroinfo {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  max-width: 50%;
+}
+
+.heroinfo h1 {
+  font-size: 48px;
+  font-weight: 800;
+  width: 80%;
+  min-width: 500px;
+}
+.heroinfo p {
+  font-size: 15px;
+  width: 80%;
+}
+
+.heroright {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.heroright :nth-child(2) {
+  background-color: var(--secondbackground);
+  padding: 10px 10px;
+  border-radius: 10px;
+  color: var(--primary);
+}
+
+.heroimg {
+  width: 100%;
+}
+
+#about {
+  max-width: 1200px;
+  padding: 70px 0px;
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#about h2 {
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.aboutbottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: baseline;
+  gap: 10px;
+}
+
+.valuecard {
+  background-color: var(--secondbackground);
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  padding: 30px 10px;
+  border-radius: 20px;
+}
+
+.valuecard p {
+  max-width: 250px;
+  height: auto;
+}
+.valuecard h3 {
+  color: var(--terciary);
+  font-size: 20px;
+  font-weight: 600;
 }
