--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,30 @@
 }
 
 header {
+  width: 100%;
   color: var(--secondary);
   background-color: var(--thirdbackground);
-  width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 10px 2%;
   position: fixed;
   top: 0;
   z-index: 2;
+}
+
+.navlinks,
+.navbar {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar {
+  max-width: 1200px;
+  width: 100%;
 }
 
 span a {
@@ -43,20 +57,19 @@ span a {
   height: auto;
 }
 
-.navlinks {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-
 .navlinks span a:hover {
   color: var(--terciary);
 }
 
 main {
-  width: 100%;
   color: var(--primary);
-  background-color: var(--secondary);
+  background: var(--terciary);
+  background: linear-gradient(
+    90deg,
+    rgba(100, 141, 229, 1) 0%,
+    rgba(13, 67, 185, 1) 28%,
+    rgba(0, 0, 0, 1) 70%
+  );
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -64,7 +77,9 @@ main {
 }
 
 #hero {
-  max-width: 1200px;
+  background-color: var(--secondary);
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='26' viewBox='0 0 52 26' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23648de5' fill-opacity='0.42'%3E%3Cpath d='M10 10c0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6h2c0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4 3.314 0 6 2.686 6 6 0 2.21 1.79 4 4 4v2c-3.314 0-6-2.686-6-6 0-2.21-1.79-4-4-4-3.314 0-6-2.686-6-6zm25.464-1.95l8.486 8.486-1.414 1.414-8.486-8.486 1.414-1.414z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+  margin-top: 40px;
   padding: 70px 0px;
   display: flex;
   justify-content: center;
@@ -97,19 +112,39 @@ main {
   gap: 20px;
 }
 
-.heroright :nth-child(2) {
+.heroright a {
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
   background-color: var(--secondbackground);
   padding: 10px 10px;
   border-radius: 10px;
   color: var(--primary);
 }
 
-.heroimg {
+#about {
   width: 100%;
+  background-color: var(--secondbackground);
+  color: var(--primary);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
 
-#about {
-  max-width: 1200px;
+#about p {
+  padding: 10px;
+  width: 200px;
+  font-size: 14px;
+}
+
+#about h2 {
+  font-size: 36px;
+  font-weight: 500;
+}
+
+#cards {
   padding: 70px 0px;
   display: flex;
   gap: 20px;
@@ -118,36 +153,84 @@ main {
   align-items: center;
 }
 
-#about h2 {
+h2 {
   font-size: 30px;
   font-weight: 400;
 }
 
-.aboutbottom {
+.cardsbottom {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: baseline;
-  gap: 10px;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .valuecard {
-  background-color: var(--secondbackground);
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px,
+    rgba(6, 24, 44, 0.65) 0px 4px 6px -1px,
+    rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  width: 250px;
+  height: 340px;
+  padding: 40px 30px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
-  justify-content: center;
+  justify-content: baseline;
   align-items: center;
-  padding: 30px 10px;
+  gap: 20px;
   border-radius: 20px;
+  background-color: var(--secondbackground);
 }
 
 .valuecard p {
-  max-width: 250px;
-  height: auto;
+  font-size: 14px;
+  text-align: center;
 }
 .valuecard h3 {
   color: var(--terciary);
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 800;
+}
+
+#contact ul {
+  display: flex;
+  flex-direction: column;
+}
+
+#contact ul li {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+#contact {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.contactbottom {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+  gap: 40px;
+}
+
+.material-symbols-outlined {
+  font-variation-settings: "FILL" 1, "wght" 200, "GRAD" 0, "opsz" 48;
+}
+
+#footer {
+  width: 100%;
+  background-color: var(--thirdbackground);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 10px;
+  margin-top: 70px;
+}
+
+#footer img {
+  width: 80px;
 }
